--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,17 +19,21 @@ body {
 
 h1 {
   text-align: center;
+
 }
 h2 {
   margin: 0;
 }
 
 .grid {
+  width: 100%;
   display: grid;
-  justify-content: center;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .flip-card {
+  padding: 10px; /* for spacing in grid */
+  display: inline-block;
   background-color: transparent;
   width: 300px;
   height: 200px;
@@ -84,11 +88,10 @@ h2 {
   display: inline-block;
   border: 1px transparent;
   border-radius: 10px;
-  background-color: #db2f23;
-  width: 30%;
-  height: 20%;
+  color: red;
   align-items: center;
   justify-content: center;
+  margin: 0;
 }
 
 .footer-padding {
