HTML/CSS Adjustments
Set footer to fixed to bottom of screen, put container only in newCard view, as it was causing issues with grid layout of cards being spawned in. Still testing filling out page/grid with more cards. Minor fixes like removing useless footer padding and closing head section in header.

--- a/views/newCard.ejs
+++ b/views/newCard.ejs
@@ -1,5 +1,5 @@
 <%- include("partials/header") -%>
-
+<div class="container">
 <h1><strong>Create a New Card</strong></h1>
 <form class="" action="/newCard" method="post">
   <div class="form-group">
@@ -12,5 +12,5 @@
   </div>
   <button type="submit" class="btn btn-primary" name="button">Publish</button>
 </form>
-
+</div>
 <%- include("partials/footer") -%>
