--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,13 +27,16 @@ h2 {
 
 .grid {
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  /* display: grid; */
+  /* grid-template-columns: repeat(3, 1fr); */
+  display: inline-flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .flip-card {
   padding: 10px; /* for spacing in grid */
-  display: inline-block;
+  /* display: inline-block; */
   background-color: transparent;
   width: 300px;
   height: 200px;
@@ -42,7 +45,7 @@ h2 {
 
 /* needed to position the front and back side */
 .flip-card-inner {
-  position: relative;
+  /* position: relative; */
   width: 100%;
   height: 100%;
   text-align: center;
@@ -94,21 +97,17 @@ h2 {
   margin: 0;
 }
 
-.footer-padding {
-	padding-bottom: 60px;
-}
-
 .footer {
-	position: absolute;
+	position: fixed;
 	text-align: center;
 	bottom: 0;
 	width: 100%;
-	height: 60px;
+	height: 40px;
 	background-color: #e03814;
 }
 
 .footer p {
-	margin-top: 25px;
+	margin-top: 20px;
 	font-size: 12px;
   color: var(--dark);
 }
