--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,6 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/styles.css">
+</head>
 
-  <body>
-    <div class="container">
+<body>
