First commit on MBP, made changes to start view that allowed for what might be proper grid functionality thanks to moving the end of ejs loop inside div. Other minor changes with the app and css to help with the changes to the view.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,6 +27,7 @@ h2 {
 
 .grid {
   width: 100%;
+  justify-content: center;
   /* display: grid; */
   /* grid-template-columns: repeat(3, 1fr); */
   display: inline-flex;
