Minor update to remove unused div and extra closing bracket. Site loads as expected on change.

--- a/views/startV.ejs
+++ b/views/startV.ejs
@@ -26,8 +26,5 @@
   <% }); %>
 </div>
 
-<% }); %>
-</div>
-
-<!-- Need to ensure that objects to do not get covered by footer -->
+<!-- Need to ensure that objects do not get covered by footer -->
 <%- include("partials/footer") -%>
