Small style changes, testing out adding links to header.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -98,6 +98,11 @@ h2 {
   margin: 0;
 }
 
+.header {
+  position: fixed;
+  background-color: #e03814;
+}
+
 .footer {
 	position: fixed;
 	text-align: center;
