--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,5 +8,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
-
+<nav class="navbar navbar-expand-lg">
+  <a class="btn btn-primary" href="/" role="button">Home</a>
+  <a class="btn btn-primary" href="/newcard" role="button">Add Card</a>
+</nav>
 <body>
